--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -18,11 +18,10 @@
 		<script src="/croissants/controllers/croissants.js"></script>
 		<script src="/croissants/controllers/accueilView.js"></script>
 		
-		<link rel="stylesheet" type="text/css" href="../css/jquery-ui.css"></link>
-		<link rel="stylesheet" type="text/css" href="../css/select2.css"></link>
-		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"></link>
-		<link rel="stylesheet" type="text/css" href="../css/bootstrap-theme.min.css"></link>
-		<link rel="stylesheet" type="text/css" href="../css/sdev-ui.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
 	</head>
 	
