--- a/WebContent/views/login.html
+++ b/WebContent/views/login.html
@@ -7,6 +7,6 @@
 	<div class="form-group">
 		<input type="password" id="motDePasseField" name="motDePasseField" class="form-control" placeholder="Mot de passe" ng-model="motDePasse"/>
 	</div>
-	<button class="btn btn-primary" ng-click="connexion()">Connexion</button>
-	<button class="btn btn-primary" ng-click="gotoInscription()">Creer un compte</button>
+	<button class="btn btn-primary btn-block" ng-click="connexion()">Connexion</button>
+	<button class="btn btn-primary btn-block btn-warning" ng-click="gotoInscription()">Creer un compte</button>
 </form>
