Premier commit de test

--- a/WebContent/views/guest.html
+++ b/WebContent/views/guest.html
@@ -20,7 +20,7 @@
 		<script src="/croissants/controllers/inscriptionView.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
-		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
