--- a/WebContent/css/croissants.css
+++ b/WebContent/css/croissants.css
@@ -211,3 +211,29 @@ input.dateTimeField {
 .ui-dialog-titlebar-close {
 	background: #CCCCCC !important;
 }
+
+#sdevInfoDialog.ui-dialog-content {
+	background: url(../images/sdevui/info32.png) no-repeat 15px 15px;
+	padding: 25px 20px 25px 55px;
+}
+
+#sdevErrorDialog.ui-dialog-content {
+	background: url(../images/sdevui/error32.png) no-repeat 15px 15px;
+	padding: 25px 20px 25px 55px;
+}
+
+#sdevWarningDialog.ui-dialog-content {
+	background: url(../images/sdevui/warning32.png) no-repeat 15px 15px;
+	padding: 25px 20px 25px 55px;
+}
+
+.sdevActionFeedbackBox {
+	background-color: #D1D4D7;
+	color: black;;
+	border: 1px solid #B3B3B3;
+	border-radius: 5px;
+	padding: 5px 20px 5px 20px;	
+	width: 400px;
+}
+
+
