--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -16,10 +16,10 @@
 	    <script src="/croissants/js/bootstrap.min.js"></script>
 		<script src="/croissants/js/croissants_utils.js"></script>
 		<script src="/croissants/controllers/croissants.js"></script>
-		<script src="/croissants/controllers/accueilView.js"></script>
+		<script src="/croissants/controllers/accueil.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
-		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
