--- a/WebContent/views/guest.html
+++ b/WebContent/views/guest.html
@@ -17,10 +17,10 @@
 		<script src="/croissants/js/croissants_utils.js"></script>
 		<script src="/croissants/controllers/guest.js"></script>
 		<script src="/croissants/controllers/login.js"></script>
-		<script src="/croissants/controllers/inscriptionView.js"></script>
+		<script src="/croissants/controllers/inscription.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
-		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
