Gestion de la vue inscription (Merge des modififcation des services. + ajout de fontawseome + inscription coté client.)

--- a/WebContent/css/croissants.css
+++ b/WebContent/css/croissants.css
@@ -236,4 +236,52 @@ input.dateTimeField {
 	width: 400px;
 }
 
+/***** UTIL *****/
+.sep20px {
+	margin-bottom:20px;	
+}
 
+.spinner {
+  display: inline-block;
+  opacity: 0;
+  width: 0;
+
+  -webkit-transition: opacity 0.25s, width 0.25s;
+  -moz-transition: opacity 0.25s, width 0.25s;
+  -o-transition: opacity 0.25s, width 0.25s;
+  transition: opacity 0.25s, width 0.25s;
+}
+
+.has-spinner.active {
+  cursor:progress;
+}
+
+.has-spinner.active .spinner {
+  opacity: 1;
+  width: auto; /* This doesn't work, just fix for unkown width elements */
+}
+
+.has-spinner.btn.active .spinner {
+    width: 16px;
+}
+
+
+.format-error-message {
+	margin-top:3px;
+	color : red;	
+	font-style: italic;
+}
+
+.format-ok-message {
+	border:1px solid green;
+}
+
+.format-error-message-input {
+	border:1px solid red;
+}
+
+.logo-titre {
+	margin-right:15px;
+}
+
+.
