--- a/WebContent/views/guest.html
+++ b/WebContent/views/guest.html
@@ -21,6 +21,7 @@
 		
 		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.min.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/font-awesome.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
