--- a/WebContent/views/inscription.html
+++ b/WebContent/views/inscription.html
@@ -1,4 +1,38 @@
 <!-- Formulaire de creation de compte -->
-<form novalidate class="form-horizontal inscription-form">
-	<h1>Creer un compte</h1>
+<form novalidate class="form-horizontal inscription-form" name="userForm">
+	<h1><i class="fa fa-angellist logo-titre"></i>Creer un compte</h1>
+	Cycles est une application de gestion de périodicité (rappels automatique à certains évènements) pour des groupes de personnes. Cette application nécessite une connexion préalable des utilisateurs.
+	<div class="sep20px"></div>
+	<div class="form-group">
+		<label for="inputEmail" class="col-sm-4 control-label">Votre Email</label>
+		<div class="col-sm-8">
+			<input type="text" id="mailInput" class="form-control" id="inputEmail" ng-model="user.email">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="inputPassword" class="col-sm-4 control-label">Votre Password</label>
+		<div class="col-sm-8">
+			<input type="password" class="form-control" id="inputPassword" ng-model="user.motDePasse">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="inputPassword2" class="col-sm-4 control-label">Retapez votre Password</label>
+		<div class="col-sm-8">
+			<input type="password" class="form-control" id="inputPassword2" ng-model="motDePasseBis">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="inputNom" class="col-sm-4 control-label">Votre Pseudo</label>
+		<div class="col-sm-8">
+			<input type="text" class="form-control" id="inputNom" ng-model="user.nom">
+		</div>
+	</div>
+	<div class="form-group">
+	    <div class="col-sm-offset-4 col-sm-8 has-spinner">
+	      <button type="submit" class="btn btn-primary has-spinner {{spinnerClass}}" ng-click="creerUtilisateur()">
+	      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>S'inscrire à Cycles
+	      </button>
+	    </div>
+  </div>
+	
 </form>
