--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -20,11 +20,15 @@
 		<script src="/croissants/controllers/groupes.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
-		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.min.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/font-awesome.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
+		
+		<!-- Ressources externes -->
+		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+		
 	</head>
 	
 	<body ng-controller="CroissantsTemplateCtrl">
@@ -38,7 +42,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand navLink" href="/croissants/views/croissants.html#/home">Cycles</a>
+				<a class="navbar-brand navLink" href="/croissants/views/croissants.html#/accueilView">Cycles</a>
 				
 			</div>
 			
