--- a/WebContent/views/guest.html
+++ b/WebContent/views/guest.html
@@ -20,14 +20,18 @@
 		<script src="/croissants/controllers/inscription.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
-		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.min.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/font-awesome.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
+		
+		<!-- Ressources externes -->
+		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+		
 	</head>
 	
-	<body ng-controller="GuestTemplateCtrl">
+	<body ng-controller="GuestTemplateCtrl" style="background-image:url(/croissants/img/Croissant_tourne_nb_transp_resize_centre.png);background-repeat:no-repeat;background-position:bottom left;">
 		<div ng-view class="mainView"></div>
 
 	
