--- a/WebContent/views/groupes.html
+++ b/WebContent/views/groupes.html
@@ -9,7 +9,7 @@
 
 	<div class="bottom-space">Voici tous les groupes auxquels vous appartenez. Quel est votre préféré ?</div>
 
-	<div ng-hide="constitutionsGroupe.length">Vous n'appartenez à aucun groupe.</div>
+	<div ng-hide="constitutionsGroupe.length" class="bottom-space">Vous n'appartenez à aucun groupe.</div>
 	<div ng-show="constitutionsGroupe.length">
 		<table class="table table-hover bottom-space">
 			<thead>
@@ -32,8 +32,8 @@
 	</div>
 
 	<div class="button-bar">
-		<button type="submit" class="btn btn-primary">Créer un groupe</button>
-		<button type="submit" class="btn btn-primary">Rejoindre un groupe</button>
+		<a href="#" role="button" class="btn btn-primary">Créer un groupe</a>
+		<a href="#" role="button" class="btn btn-primary">Rejoindre un groupe</a>
 
 	</div>
 
