--- a/WebContent/views/inscription.html
+++ b/WebContent/views/inscription.html
@@ -1,38 +1,48 @@
 <!-- Formulaire de creation de compte -->
-<form novalidate class="form-horizontal inscription-form" name="userForm">
-	<h1><i class="fa fa-angellist logo-titre"></i>Creer un compte</h1>
-	Cycles est une application de gestion de pÈriodicitÈ (rappels automatique ‡ certains ÈvËnements) pour des groupes de personnes. Cette application nÈcessite une connexion prÈalable des utilisateurs.
-	<div class="sep20px"></div>
-	<div class="form-group">
-		<label for="inputEmail" class="col-sm-4 control-label">Votre Email</label>
-		<div class="col-sm-8">
-			<input type="text" id="mailInput" class="form-control" id="inputEmail" ng-model="user.email">
+<div class="center-div">
+	<h1><i class="fa fa-play-circle logo-titre"></i></i>Creer un compte</h1>
+	Cycles est une application de gestion de p√©riodicit√© (rappels automatique √† certains √©v√®nements) pour des groupes de personnes. Cette application n√©cessite une connexion pr√©alable des utilisateurs.
+	<div class="bottom-space"></div>
+	<div ng-show="inscriptionOk">Merci <b>{{user.nom}}</b>, votre inscription a bien √©t√© prise en compte.
+	<div class="bottom-space"></div>
+		<div class="button-bar">
+			<a href="/croissants/views/guest.html#/loginView" role="button" class="btn btn-primary">Identifiez-vous !</a>
 		</div>
 	</div>
-	<div class="form-group">
-		<label for="inputPassword" class="col-sm-4 control-label">Votre Password</label>
-		<div class="col-sm-8">
-			<input type="password" class="form-control" id="inputPassword" ng-model="user.motDePasse">
+	<div ng-hide="inscriptionOk">
+	<form novalidate class="form-horizontal " name="userForm">
+		<div class="form-group">
+			<label for="inputEmail" class="col-sm-4 control-label">Votre Email</label>
+			<div class="col-sm-8">
+				<input type="text" id="mailInput" class="form-control" id="inputEmail" ng-model="user.email">
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="inputPassword2" class="col-sm-4 control-label">Retapez votre Password</label>
-		<div class="col-sm-8">
-			<input type="password" class="form-control" id="inputPassword2" ng-model="motDePasseBis">
+		<div class="form-group">
+			<label for="inputPassword" class="col-sm-4 control-label">Votre Password</label>
+			<div class="col-sm-8">
+				<input type="password" class="form-control" id="inputPassword" ng-model="user.motDePasse">
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="inputNom" class="col-sm-4 control-label">Votre Pseudo</label>
-		<div class="col-sm-8">
-			<input type="text" class="form-control" id="inputNom" ng-model="user.nom">
+		<div class="form-group">
+			<label for="inputPassword2" class="col-sm-4 control-label">Retapez votre Password</label>
+			<div class="col-sm-8">
+				<input type="password" class="form-control" id="inputPassword2" ng-model="motDePasseBis">
+			</div>
 		</div>
+		<div class="form-group">
+			<label for="inputNom" class="col-sm-4 control-label">Votre Pseudo</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="inputNom" ng-model="user.nom">
+			</div>
+		</div>
+		<div class="form-group">
+		    <div class="col-sm-offset-4 col-sm-8 has-spinner">
+		      <button type="submit" class="btn btn-primary has-spinner {{spinnerClass}}" ng-click="creerUtilisateur()">
+		      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>S'inscrire √† Cycles
+		      </button>
+		    </div>
+	  	</div>
+	  </form>
 	</div>
-	<div class="form-group">
-	    <div class="col-sm-offset-4 col-sm-8 has-spinner">
-	      <button type="submit" class="btn btn-primary has-spinner {{spinnerClass}}" ng-click="creerUtilisateur()">
-	      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>S'inscrire ‡ Cycles
-	      </button>
-	    </div>
-  </div>
-	
-</form>
+
+</div>
