Canevas des pages : groupe, editerGroupe et rejoindreGroupe

--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -18,6 +18,9 @@
 		<script src="/croissants/controllers/croissants.js"></script>
 		<script src="/croissants/controllers/accueil.js"></script>
 		<script src="/croissants/controllers/groupes.js"></script>
+		<script src="/croissants/controllers/groupe.js"></script>
+		<script src="/croissants/controllers/editerGroupe.js"></script>
+		<script src="/croissants/controllers/rejoindreGroupe.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="/croissants/css/jquery-ui.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/select2.css"></link>
