--- a/WebContent/views/accueil.html
+++ b/WebContent/views/accueil.html
@@ -1,1 +1,10 @@
+<div class="center-div">
+
+<div class="bottom-space title-page">
+		<h1>
+			<i class="fa fa-home logo-titre"></i>Accueil
+		</h1>
+	</div>
 <div>Bienvenue {{utilisateur.nom}}</div>
+
+</div>
