--- a/WebContent/views/guest.html
+++ b/WebContent/views/guest.html
@@ -31,7 +31,7 @@
 		
 	</head>
 	
-	<body ng-controller="GuestTemplateCtrl" style="background-image:url(/croissants/img/Croissant_tourne_nb_transp_resize_centre.png);background-repeat:no-repeat;background-position:bottom left;">
+	<body ng-controller="GuestTemplateCtrl" class="body-background-logo guest-logo" >
 		<div ng-view class="mainView"></div>
 
 	
