--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -34,7 +34,7 @@
 		
 	</head>
 	
-	<body ng-controller="CroissantsTemplateCtrl">
+	<body ng-controller="CroissantsTemplateCtrl" class="body-background-logo logged-logo">
 		<!-- Menu -->
 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
