--- a/WebContent/views/editerGroupe.html
+++ b/WebContent/views/editerGroupe.html
@@ -1,1 +1,39 @@
-<h1>Editer Groupe</h1>
+<div class="center-div">
+
+	<div class="bottom-space title-page">
+		<h1>
+			<i class="fa fa-users logo-titre"></i>Editer groupe
+		</h1>
+	</div>
+
+
+<form novalidate class="form-horizontal" name="groupeForm">
+		<div class="form-group">
+			<label for="nomGroupe" class="col-sm-4 control-label">Nom</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="nomGroupe" ng-model="groupe.nom">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="messageGroupe" class="col-sm-4 control-label">Message</label>
+			<div class="col-sm-8">
+				<textarea form="groupeForm" class="form-control" id="messageGroupe" ng-model="groupe.message"></textarea>
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="occurence" class="col-sm-4 control-label">Jour d'occurence</label>
+			<div class="col-sm-8">
+				<select name="occurence" ng-model="groupe.occurence" form="groupeForm"
+				 class="form-control" id="occurence"  ng-options=" a.nom for a in jours">                
+	       		</select>
+			
+			</div>
+		</div>
+		<div class="form-group">
+		    <div class="col-sm-offset-4 col-sm-8 has-spinner">
+		      <button type="submit" class="btn btn-primary has-spinner {{spinnerClass}}" ng-click="editerGroupe()">
+		      	<span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>Valider
+		      </button>
+		    </div>
+	  	</div>
+	  </form>
