--- a/WebContent/views/inscription.html
+++ b/WebContent/views/inscription.html
@@ -14,7 +14,7 @@
 		<div class="form-group">
 			<label for="inputEmail" class="col-sm-4 control-label">Votre Email</label>
 			<div class="col-sm-8">
-				<input type="text" id="mailInput" class="form-control" id="inputEmail" ng-model="user.email">
+				<input type="text" class="form-control" id="inputEmail" ng-model="user.email">
 			</div>
 		</div>
 		<div class="form-group">
