--- a/WebContent/views/groupes.html
+++ b/WebContent/views/groupes.html
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="button-bar">
-		<a href="#" role="button" class="btn btn-primary">Créer un groupe</a>
+		<a href="/croissants/views/croissants.html#/editerGroupeView" role="button" class="btn btn-primary">Créer un groupe</a>
 		<a href="#" role="button" class="btn btn-primary">Rejoindre un groupe</a>
 
 	</div>
