--- a/WebContent/views/groupe.html
+++ b/WebContent/views/groupe.html
@@ -1,1 +1,13 @@
-<h1>Groupe</h1>
+<div class="center-div">
+
+	<div class="bottom-space title-page">
+		<h1>
+			<i class="fa fa-users logo-titre"></i>Groupe {{groupe.nom}}
+		</h1>
+	</div>
+	<div class="bottom-space">Petit blabla....</div>
+	
+
+	
+	
+</div>
