--- a/WebContent/views/editerGroupe.html
+++ b/WebContent/views/editerGroupe.html
@@ -21,16 +21,33 @@
 				<textarea form="groupeForm" class="form-control" id="messageGroupe" ng-model="groupe.message"></textarea>
 			</div>
 		</div>
-		<div class="form-group">
-			<label for="occurence" class="col-sm-4 control-label">Jour d'occurence</label>
+		<div class="form-group" class="bottom-space">
+			<label for="jourOccurence" class="col-sm-4 control-label">Jour d'occurence</label>
 			<div class="col-sm-8">
-				<select name="occurence" ng-model="groupe.occurence" form="groupeForm"
-				ng-init="groupe.occurence = jours[0].id"
-				 class="form-control" id="occurence"  ng-options="jour.id as jour.nom for jour in jours">                
+			{{selectedOption}}
+				<select name="jourOccurence" ng-model="selectedOption" form="groupeForm"
+				ng-init="selectedOption=jours[0].id"
+				 class="form-control" id="jourOccurence"  ng-options="jour.id as jour.nom for jour in jours">                
 	       		</select>
 			
 			</div>
 		</div>
+		<div ng:show="groupe.jeton">
+		<div class="form-group">
+			<label for="jetonGroupe" class="col-sm-4 control-label">Jeton</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control uneditable-input" id="jetonGroupe" ng-model="groupe.jeton" readonly>
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="passwordGroupe" class="col-sm-4 control-label">Mot de passe </label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="passwordGroupe" ng-model="groupe.motDePasse" readonly>
+			</div>
+		</div>
+		</div>
+		
+		<!-- Valider bouton -->
 		<div class="form-group">
 		    <div class="col-sm-offset-4 col-sm-8 has-spinner">
 		      <button type="submit" class="btn btn-primary has-spinner {{spinnerClass}}" ng-click="editerGroupe()">
