--- a/WebContent/views/groupes.html
+++ b/WebContent/views/groupes.html
@@ -33,7 +33,7 @@
 
 	<div class="button-bar">
 		<a href="/croissants/views/croissants.html#/editerGroupeView" role="button" class="btn btn-primary">Créer un groupe</a>
-		<a href="#" role="button" class="btn btn-primary">Rejoindre un groupe</a>
+		<a href="/croissants/views/croissants.html#/rejoindreGroupeView" role="button" class="btn btn-primary">Rejoindre un groupe</a>
 
 	</div>
 
