--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -56,7 +56,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href=""><i class="fa fa-user"></i></a></li>
-					<li><a href="">Deconnexion</a></li>
+					<li><a href="" ng-click="seDeconnecter()">Deconnexion</a></li>
 				</ul>
 			</div>
 			
