Gestion correct du select dans editerGroupe

--- a/WebContent/views/accueil.html
+++ b/WebContent/views/accueil.html
@@ -5,6 +5,5 @@
 			<i class="fa fa-home logo-titre"></i>Accueil
 		</h1>
 	</div>
-<div>Bienvenue {{utilisateur.nom}}</div>
-
+<div>Bienvenue {{utilisateur.nom}} !!</div>
 </div>
