--- a/WebContent/views/groupes.html
+++ b/WebContent/views/groupes.html
@@ -11,6 +11,7 @@
 
 	<div ng-hide="constitutionsGroupe.length" class="bottom-space">Vous n'appartenez à aucun groupe.</div>
 	<div ng-show="constitutionsGroupe.length">
+	<div class="table-responsive">
 		<table class="table table-hover bottom-space">
 			<thead>
 				<tr>
@@ -29,6 +30,7 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
 	</div>
 
 	<div class="button-bar">
