--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -13,6 +13,7 @@
 	    <script src="/croissants/js/angular-route.js"></script>
 	    <script src="/croissants/js/angular-select2.js"></script>
 	    <script src="/croissants/js/angular-jquery-ui.js"></script>
+	    <script src="/croissants/js/angular-locale_fr-fr.js"></script>
 	    <script src="/croissants/js/bootstrap.min.js"></script>
 		<script src="/croissants/js/croissants_utils.js"></script>
 		<script src="/croissants/controllers/croissants.js"></script>
