--- a/WebContent/views/login.html
+++ b/WebContent/views/login.html
@@ -1,6 +1,9 @@
 <!-- Formulaire de connexion -->
 <form novalidate class="form-horizontal login-form">
 	<h1>Connectez-vous</h1>
+	<div ng-show="errorMessage" class="error-div small-bottom-space">
+		{{errorMessage}}
+	</div>	
 	<div class="form-group">
 		<input type="text" id="emailField" name="emailField" class="form-control" placeholder="Email" ng-model="email"/>
 	</div>
