--- a/WebContent/views/editerGroupe.html
+++ b/WebContent/views/editerGroupe.html
@@ -8,7 +8,7 @@
 	<div class="bottom-space">Petit blabla....</div>
 
 
-<form novalidate class="form-horizontal" name="groupeForm">
+	<form novalidate class="form-horizontal" name="groupeForm">
 		<div class="form-group">
 			<label for="nomGroupe" class="col-sm-4 control-label">Nom</label>
 			<div class="col-sm-8">
@@ -24,26 +24,25 @@
 		<div class="form-group" class="bottom-space">
 			<label for="jourOccurence" class="col-sm-4 control-label">Jour d'occurence</label>
 			<div class="col-sm-8">
-			{{selectedOption}}
 				<select name="jourOccurence" ng-model="selectedOption" form="groupeForm"
 				 class="form-control" id="jourOccurence"  ng-options=" jour.nom for jour in jours track by jour.id">                
 	       		</select>
 			
 			</div>
 		</div>
-		<div ng:show="groupe.jeton">
-		<div class="form-group">
-			<label for="jetonGroupe" class="col-sm-4 control-label">Jeton</label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control uneditable-input" id="jetonGroupe" ng-model="groupe.jeton" readonly>
+		<div ng-show="groupe.jeton">
+			<div class="form-group">
+				<label for="jetonGroupe" class="col-sm-4 control-label">Jeton</label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control uneditable-input" id="jetonGroupe" ng-model="groupe.jeton" readonly>
+				</div>
 			</div>
-		</div>
-		<div class="form-group">
-			<label for="passwordGroupe" class="col-sm-4 control-label">Mot de passe </label>
-			<div class="col-sm-8">
-				<input type="text" class="form-control" id="passwordGroupe" ng-model="groupe.motDePasse" readonly>
+			<div class="form-group">
+				<label for="passwordGroupe" class="col-sm-4 control-label">Mot de passe </label>
+				<div class="col-sm-8">
+					<input type="text" class="form-control" id="passwordGroupe" ng-model="groupe.motDePasse" readonly>
+				</div>
 			</div>
-		</div>
 		</div>
 		
 		<!-- Valider bouton -->
@@ -55,3 +54,4 @@
 		    </div>
 	  	</div>
 	  </form>
+</div>
