--- a/WebContent/views/croissants.html
+++ b/WebContent/views/croissants.html
@@ -14,6 +14,7 @@
 	    <script src="/croissants/js/angular-select2.js"></script>
 	    <script src="/croissants/js/angular-jquery-ui.js"></script>
 	    <script src="/croissants/js/angular-locale_fr-fr.js"></script>
+	    <script src="/croissants/js/xeditable.min.js"></script>
 	    
 		<script src="/croissants/js/croissants_utils.js"></script>
 		<script src="/croissants/controllers/croissants.js"></script>
@@ -28,6 +29,7 @@
 		<link rel="stylesheet" type="text/css" href="/croissants/css/font-awesome.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/bootstrap-theme.min.css"></link>
+		<link rel="stylesheet" type="text/css" href="/croissants/css/xeditable.css"></link>
 		<link rel="stylesheet" type="text/css" href="/croissants/css/croissants.css"></link>
 		
 		<!-- Ressources externes -->
